Add UserRepository integration tests, UserService unit tests and fix SonarQube issues